--- a/days/day26.html
+++ b/days/day26.html
@@ -89,7 +89,7 @@
 	    
       function CreateTail(X,Y, color, size,parent){
         circle = document.createElement('div');
-        parent.appendChild(circle);
+        stage.appendChild(circle);
         circle.style.backgroundColor = color;
         circle.style.width = size + "px"; 
         circle.style.height = size + "px";
