--- a/days/day26.html
+++ b/days/day26.html
@@ -96,13 +96,8 @@
         circle.style.left = X;
         circle.style.top =  Y;
         circle.className = "circle";
-        setInterval(function (){
-          if (circle.style.opacity != 0 &&  circle.style.width !=0) {
-            circle.style.opacity -= 0.1;
-            circle.style.width -= 2;
-            circle.style.height -= 2;
-	  }
-	},150);
+        circle.classList.add = "opacityT";
+	
       }
             /*
 						
