--- a/days/day26.html
+++ b/days/day26.html
@@ -96,7 +96,7 @@
         circle.style.left = X;
         circle.style.top =  Y;
         circle.className = "circle";
-        circle.classList.add = "opacityT";
+        circle.classList.add("opacityT");
 	
       }
             /*
