--- a/days/day26.html
+++ b/days/day26.html
@@ -98,7 +98,8 @@
         circle.className = "circle";
 	setTimeout(function(){
 	   circle.classList.add("opacityT");
-	},10);
+	   parent.removeChild(circle)
+	},1);
 	
       }
             /*
