--- a/days/day26.html
+++ b/days/day26.html
@@ -98,7 +98,7 @@
         circle.className = "circle";
 	setTimeout(function(){
 	   circle.classList.add("opacityT");
-	   parent.removeChild(circle)
+	   setTimeout(function(){parent.removeChild(circle)}, 1000);
 	},1);
 	
       }
