--- a/days/day26.html
+++ b/days/day26.html
@@ -95,7 +95,7 @@
         circle.style.height = size + "px";
         circle.style.left = X;
         circle.style.top =  Y;
-        circle.className = "circle";
+        circle.className = "circle1";
 	setTimeout(function(){
 	   circle.classList.add("opacityT");
 	   setTimeout(function(){parent.removeChild(circle)}, 1000);
