--- a/days/day26.html
+++ b/days/day26.html
@@ -102,6 +102,7 @@
         circle.style.left = X;
         circle.style.top =  Y;
         setTimeout(function(){
+		console.log(circle);
 		parent.removeChild(circle);
 	},1000);
 	
