--- a/days/day26.html
+++ b/days/day26.html
@@ -103,7 +103,7 @@
         circle.style.top =  Y;
         setTimeout(function(){
 		console.log(circle);
-		parent.removeChild(circle);
+		stage.removeChild(circle);
 	},1000);
 	
       }
