--- a/days/day26.html
+++ b/days/day26.html
@@ -98,6 +98,9 @@
         circle.style.top =  Y;
         
         parent.appendChild(circle);
+	setTimeout(function(circle){
+		parent.removeChild(circle);
+	},1000);
       }
             /*
 						
