--- a/days/day26.html
+++ b/days/day26.html
@@ -91,7 +91,7 @@
       function CreateTail(X,Y, color, size,parent){
         circle = document.createElement('div');
         circle.className = "circle opacityT"; 
-        circle.style.backgroundColor = 'red';
+        circle.style.backgroundColor = color;
         circle.style.width = size + "px"; 
         circle.style.height = size + "px";
         circle.style.left = X;
