--- a/days/day26.html
+++ b/days/day26.html
@@ -99,7 +99,7 @@
         //parent = document.getElementsByClassName(ID)[0];
         stage.appendChild(circle);
 	setTimeout(function(circle){
-		parent.removeChild(circle);
+		stage.removeChild(circle);
 	},1000);
       }
             /*
