--- a/days/day26.html
+++ b/days/day26.html
@@ -44,7 +44,7 @@
             stage.addEventListener("mousemove", function(evt){
               myFunction(evt, ID);
 	    });
-            MainCircle.addEventListener("mouseup", function(){
+            stage.addEventListener("mouseup", function(){
                isMouseDown = false;
             });
 	  }); 
