--- a/days/day26.html
+++ b/days/day26.html
@@ -96,11 +96,8 @@
         circle.style.height = size + "px";
         circle.style.left = X;
         circle.style.top =  Y;
-        //parent = document.getElementsByClassName(ID)[0];
-        stage.appendChild(circle);
-	setTimeout(function(circle){
-		stage.removeChild(circle);
-	},1000);
+        parent = document.getElementsByClassName(ID)[0];
+        parent.appendChild(circle);
       }
             /*
 						
