--- a/days/day25.html
+++ b/days/day25.html
@@ -17,6 +17,7 @@
       var size;
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
+          createjs.Touch.enable(stage);
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
           socket.on('user connected', function(UserId){ 
