--- a/days/day26.html
+++ b/days/day26.html
@@ -5,6 +5,7 @@
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"> </script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"> </script>
     <link href="/main.css" rel="stylesheet">
+    <meta name="viewport"  content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Disappearing Tail</title>
     <style>
       #canvas {border: solid 1px black; background-color: lightblue;}
