--- a/days/day30.html
+++ b/days/day30.html
@@ -11,8 +11,12 @@
   <body>
     <div class="DialogWindow"> 
       <div id="parent">
-        <button id="create"> Создать доску </button>
-        <button id="join"> Присоединиться к доске </button>
+      	<div class="firstbutton navigate">
+       	 	<button id="create"> Создать доску </button>
+       	</div>
+       	<div class="secondbutton navigate">
+            <button id="join"> Присоединиться к доске </button>
+        </div>
       </div>
     </div>
     <script >
