--- a/days/day30.html
+++ b/days/day30.html
@@ -55,10 +55,10 @@
         InputDiv.ClassName = "navigate";
         SubmitDiv = document.createElement('div');
 	SubmitDiv.ClassName = "navigate";
-	InputDiv.appendChild('RoomInput');
-        SubmitDiv.appendChild('SubmitButton');
-	parent.appendChild('InputDiv');
-        parent.appendChild('SubmitDiv');
+	InputDiv.appendChild(RoomInput);
+        SubmitDiv.appendChild(SubmitButton);
+	parent.appendChild(InputDiv);
+        parent.appendChild(SubmitDiv);
       };
 	    
 	    
