--- a/days/day30.html
+++ b/days/day30.html
@@ -48,7 +48,7 @@
 	  SubmitButton.id = "SubmitJoin";
           SubmitButton.addEventListener("submit", function(evt){
              evt.preventDefault();
-             socket.emit("board create", RoomInput.value);
+             socket.emit("board join", RoomInput.value);
 	  });
 	}
         RoomInput.style.width = "115px";
