--- a/days/day30.html
+++ b/days/day30.html
@@ -53,7 +53,7 @@
 	}
         RoomInput.style.width = "115px";
         SubmitButton.style.width = "83px";
-        SubmitButton.value = "Отправить";
+        SubmitButton.innerText = "Отправить";
         InputDiv = document.createElement('div');
         InputDiv.className = "inputdiv navigate";
         SubmitDiv = document.createElement('div');
