--- a/days/day30.html
+++ b/days/day30.html
@@ -51,9 +51,14 @@
              socket.emit("board join", RoomInput.value);
 	  });
 	}
+	      
         RoomInput.style.width = "115px";
         SubmitButton.style.width = "83px";
         SubmitButton.innerText = "Отправить";
+        if (InputDiv != "undefined"){
+          parent.removeChild(InputDiv);
+          parent.removeChild(SubmitDiv);
+	}
         InputDiv = document.createElement('div');
         InputDiv.className = "inputdiv navigate";
         SubmitDiv = document.createElement('div');
