--- a/days/day30.html
+++ b/days/day30.html
@@ -24,6 +24,8 @@
       var create = document.getElementById('create');
       var join = document.getElementById('join');
       var parent = document.getElementById('parent');
+      var InputDiv;
+      var SubmitDiv;
       create.addEventListener("mousedown", function(){
         ChangeParent("create")
       });
