--- a/days/day30.html
+++ b/days/day30.html
@@ -57,7 +57,7 @@
         RoomInput.style.width = "115px";
         SubmitButton.style.width = "83px";
         SubmitButton.innerText = "Отправить";
-        if (InputDiv != "undefined"){
+        if (InputDiv != null){
           parent.removeChild(InputDiv);
           parent.removeChild(SubmitDiv);
 	}
