--- a/days/day30.html
+++ b/days/day30.html
@@ -41,7 +41,7 @@
 	  SubmitButton.id = "SubmitCreate";
           SubmitButton.innerText = "Создать";
           SubmitButton.addEventListener("submit", function(evt){
-             evt.preventDefault();
+             //evt.preventDefault();
              console.log('for create');
              socket.emit("board create", RoomInput.value);
 	  });
@@ -51,7 +51,7 @@
 	  SubmitButton.id = "SubmitJoin";
           SubmitButton.innerText = "Присоединиться";
           SubmitButton.addEventListener("submit", function(evt){
-             evt.preventDefault();
+             //evt.preventDefault();
              console.log('for join');
              socket.emit("board join", RoomInput.value);
 	  });
