--- a/days/day30.html
+++ b/days/day30.html
@@ -40,8 +40,7 @@
 	  RoomInput.id = "InputCreate";
 	  SubmitButton.id = "SubmitCreate";
           SubmitButton.innerText = "Создать";
-          SubmitButton.addEventListener("submit", function(evt){
-             //evt.preventDefault();
+          SubmitButton.addEventListener("mousedown", function(evt){
              console.log('for create');
              socket.emit("board create", RoomInput.value);
 	  });
@@ -50,8 +49,7 @@
 	  RoomInput.id = "InputJoin";
 	  SubmitButton.id = "SubmitJoin";
           SubmitButton.innerText = "Присоединиться";
-          SubmitButton.addEventListener("submit", function(evt){
-             //evt.preventDefault();
+          SubmitButton.addEventListener("mousedown", function(evt){
              console.log('for join');
              socket.emit("board join", RoomInput.value);
 	  });
