--- a/days/day30.html
+++ b/days/day30.html
@@ -44,6 +44,9 @@
 	  SubmitButton.id = "SubmitCreate";
           SubmitButton.innerText = "Создать";
           SubmitButton.addEventListener("mousedown", function(evt){
+             if (RoomInput.value == "")
+	       // ShowErrore("Введите название доски");
+             else 
              socket.emit("board create", RoomInput.value);
 	  });
 	}
@@ -52,7 +55,10 @@
 	  SubmitButton.id = "SubmitJoin";
           SubmitButton.innerText = "Присоединиться";
           SubmitButton.addEventListener("mousedown", function(evt){
-             socket.emit("board join", RoomInput.value);
+             if (RoomInput.value == "")
+	       // ShowErrore("Введите название доски");
+             else 
+		socket.emit("board join", RoomInput.value);
 	  });
 	}
         RoomInput.style.width = "115px";
