--- a/days/day30.html
+++ b/days/day30.html
@@ -45,6 +45,7 @@
           SubmitButton.innerText = "Создать";
           SubmitButton.addEventListener("mousedown", function(evt){
              if (RoomInput.value == "")
+		     console.log('clear');
 	       // ShowErrore("Введите название доски");
              else 
              socket.emit("board create", RoomInput.value);
@@ -56,6 +57,7 @@
           SubmitButton.innerText = "Присоединиться";
           SubmitButton.addEventListener("mousedown", function(evt){
              if (RoomInput.value == "")
+		      console.log('clear');
 	       // ShowErrore("Введите название доски");
              else 
 		socket.emit("board join", RoomInput.value);
