--- a/days/day30.html
+++ b/days/day30.html
@@ -118,7 +118,9 @@
 	    
       function ShowErrore(first, second){
         ErroreWindow = document.createElement('div');
+	ErroreWindow.innerHTML = first + second;
 	ErroreWindow.ClassName = "ErroreWindow";
+	      console.log(Body);
         Body.addChild(ErroreWindow);
 	setTimeout(function(){ Body.removeChild(ErroreWindow)},5000);
       }
