--- a/days/day30.html
+++ b/days/day30.html
@@ -121,7 +121,7 @@
 	ErroreWindow.innerHTML = first + second;
 	ErroreWindow.ClassName = "ErroreWindow";
 	      console.log(Body);
-        Body.addChild(ErroreWindow);
+        Body.appendChild(ErroreWindow);
 	setTimeout(function(){ Body.removeChild(ErroreWindow)},5000);
       }
 	    /*
