--- a/days/day30.html
+++ b/days/day30.html
@@ -46,7 +46,7 @@
           SubmitButton.innerText = "Создать";
           SubmitButton.addEventListener("mousedown", function(evt){
              if (RoomInput.value == "")
-	        ShowErrore("Введите название доски");
+	        ShowErrore("Введите название доски","");
              else 
              socket.emit("board create", RoomInput.value);
 	  });
@@ -57,7 +57,7 @@
           SubmitButton.innerText = "Присоединиться";
           SubmitButton.addEventListener("mousedown", function(evt){
              if (RoomInput.value == "")
-	        ShowErrore("Введите название доски");
+	        ShowErrore("Введите название доски","");
              else 
 		socket.emit("board join", RoomInput.value);
 	  });
