--- a/days/day30.html
+++ b/days/day30.html
@@ -119,7 +119,7 @@
       function ShowErrore(first, second){
         ErroreWindow = document.createElement('div');
 	ErroreWindow.innerHTML = first + second;
-	ErroreWindow.ClassName = "ErroreWindow";
+	ErroreWindow.сlassName = "ErroreWindow";
 	      console.log(Body);
         Body.appendChild(ErroreWindow);
 	setTimeout(function(){ Body.removeChild(ErroreWindow)},5000);
