--- a/days/day30.html
+++ b/days/day30.html
@@ -113,6 +113,7 @@
       });
 
       socket.on('board errore', function(boardname){
+	      alert('errore');
         ShowErrore(boardname, " не создана");
       }); 
 	    
