--- a/days/day30.html
+++ b/days/day30.html
@@ -80,7 +80,7 @@
       };
 	
       socket.on('user connected30', function(UserId, boardname, board30){
-	  console.log(board30[boardname].Clients);
+	  console.log(board30);
 	  DialogWindow = document.getElementsByClassName('DialogWindow')[0];
 	  Body.removeChild(DialogWindow);
           stage = new createjs.Stage("canvas");
