--- a/days/day30.html
+++ b/days/day30.html
@@ -16,7 +16,7 @@
        	    <button id="create"> Создать доску </button>
        	</div>
        	<div class="secondbutton navigate">
-            <button id="join"> Присоединиться к доске </button>
+            <button id="join"> Присоединиться </button>
         </div>
       </div>
     </div>
