--- a/days/day30.html
+++ b/days/day30.html
@@ -41,6 +41,8 @@
 	RoomInput.placeholder = "Enter room number";
         var SubmitButton = document.createElement('button');
 	if (value == "create") {
+          create.setAttribute("disabled", true);
+          join.setAttribute("disabled", false);
 	  RoomInput.id = "InputCreate";
 	  SubmitButton.id = "SubmitCreate";
           SubmitButton.innerText = "Создать";
@@ -52,6 +54,8 @@
 	  });
 	}
         else {
+          create.setAttribute("disabled", false);
+          join.setAttribute("disabled", true);
 	  RoomInput.id = "InputJoin";
 	  SubmitButton.id = "SubmitJoin";
           SubmitButton.innerText = "Присоединиться";
